2025-03-02T00:40:19Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/13610384344 # 581
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2025-03-02
* notice: last 14d: unq all: 8 18
* notice: prev accum: outdated-unq outdated-all / unq all: 761 1239 / 777 1255
* notice: next accum: outdated-unq outdated-all / unq all: 761 1239 / 779 1257
* notice: prev exec diff / last date diff / accum: unq all: +2 +2 -0 -0 / +2 +2 -0 -0 / 2 2
* notice: removed / changed dates: [] / [2025-03-01]

2025-03-01T00:40:38Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/13599035173 # 580
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2025-03-01
* notice: last 14d: unq all: 7 16
* notice: prev accum: outdated-unq outdated-all / unq all: 759 1237 / 776 1254
* notice: next accum: outdated-unq outdated-all / unq all: 761 1239 / 777 1255
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2025-02-14] / [2025-02-28]

2025-02-28T00:37:12Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/13578732790 # 579
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2025-02-28
* notice: last 14d: unq all: 8 17
* notice: prev accum: outdated-unq outdated-all / unq all: 758 1236 / 775 1253
* notice: next accum: outdated-unq outdated-all / unq all: 759 1237 / 776 1254
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2025-02-13] / [2025-02-27]

2025-02-27T00:37:10Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/13556253163 # 578