@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-03-02T00:40:19Z",
-  "count_outdated" : 1239,
-  "uniques_outdated" : 761,
-  "count" : 1257,
-  "uniques" : 779,
+  "timestamp" : "2025-03-03T00:39:19Z",
+  "count_outdated" : 1240,
+  "uniques_outdated" : 762,
+  "count" : 1258,
+  "uniques" : 780,
   "clones" : [
-    {
-      "timestamp": "2025-02-16T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2025-02-18T00:00:00Z",
       "count": 2,
@@ -112,6 +103,15 @@
       "uniques": 2,
       "uniques_minmax": [ 2, 2 ],
       "uniques_decinc": [ 0, 2 ]
+    },
+    {
+      "timestamp": "2025-03-02T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
     }
   ]
 }
